# rust-minial-api

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
.sqlx/: query-4cbef63e59e0120e27e8d97c0c6afa4ea18eece8c066fec50823a2cd723f2943.json  query-5fa9cc8674864f16515747dc6689cf1b22f382c3d50e5db5d98cdbc89b28a83f.json  query-ab6d959fc8e0187239a8947895882bf08c70c00dbd0e54e4a55b809e1c5546e6.json  query-c372dfbebde8cea60753134e64bcbfe24ce10b34129ce8420d30da63f82b7582.json  query-c66cc3153041855d2b738f670de220c3787b8b96b98d034f537d31e7faf9fd0b.json  query-f6c4417fcf2bf66d0ca380afb97fb91ec3c26691397f895ac9e41db4121c4100.json
src/: main.rs
src/data_types/structs/: app_data.rs  mod.rs
src/middleware/: mod.rs
src/routes/: blog.rs  health.rs  mod.rs
src/services/blogs/: commands.rs  mod.rs  queries.rs
src/utils/: mod.rs
